--- a/app/html/pages/index/_popular.html
+++ b/app/html/pages/index/_popular.html
@@ -3,10 +3,11 @@
     <h2 class="popular__title title">
       Популярне в категоріях
     </h2>
+    
     <ul class="popular__list">
       <li class="popular__item">
         <button class="popular__btn" type="button" data-filter=".burger">
-          <svg class="popular__btn-icon" width="44" height="44">
+          <svg class="popular__btn-icon">
             <use href="images/sprite.svg#icon-burger"></use>
           </svg>
           Бургери
@@ -14,7 +15,7 @@
       </li>
       <li class="popular__item">
         <button class="popular__btn" type="button" data-filter=".pizza">
-          <svg class="popular__btn-icon" width="44" height="44">
+          <svg class="popular__btn-icon">
             <use href="images/sprite.svg#icon-pizza"></use>
           </svg>
           Піца
@@ -22,7 +23,7 @@
       </li>
       <li class="popular__item">
         <button class="popular__btn" type="button" data-filter=".sandwich">
-          <svg class="popular__btn-icon" width="44" height="44">
+          <svg class="popular__btn-icon">
             <use href="images/sprite.svg#icon-sandwich"></use>
           </svg>
           Сендвічі
@@ -30,7 +31,7 @@
       </li>
       <li class="popular__item">
         <button class="popular__btn" type="button" data-filter=".asian">
-          <svg class="popular__btn-icon" width="44" height="44">
+          <svg class="popular__btn-icon">
             <use href="images/sprite.svg#icon-asian"></use>
           </svg>
           Азійська кухня
@@ -38,14 +39,14 @@
       </li>
       <li class="popular__item">
         <button class="popular__btn" type="button" data-filter=".set">
-          <svg class="popular__btn-icon" width="44" height="44">
+          <svg class="popular__btn-icon">
             <use href="images/sprite.svg#icon-set"></use>
           </svg>
           Cети
         </button>
       </li>
     </ul>
-
+    
     <ul class="popular__catalog">
       <li class="popular__catalog-item mix burger sandwich">
         <article class="product-card">
