--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       </a>
       <ul class="menu__list">
         <li class="menu__item">
-          <a class="menu__link current link" href="#">Головна</a>
+          <a class="menu__link link current" href="index.html">Головна</a>
         </li>
         <li class="menu__item">
-          <a class="menu__link link" href="#">Страви</a>
+          <a class="menu__link link" href="catalog.html">Страви</a>
         </li>
         <li class="menu__item">
           <a class="menu__link link" href="#footer">Контакти</a>
@@ -79,10 +79,10 @@
 
   <ul class="mobile-menu__list">
     <li class="mobile-menu__item">
-      <a class="mobile-menu__link current link" href="#">Головна</a>
+      <a class="mobile-menu__link link current" href="index.html">Головна</a>
     </li>
     <li class="mobile-menu__item">
-      <a class="mobile-menu__link link" href="#">Страви</a>
+      <a class="mobile-menu__link link" href="catalog.html">Страви</a>
     </li>
     <li class="mobile-menu__item">
       <a class="mobile-menu__link link" href="#footer">Контакти</a>
@@ -156,7 +156,7 @@
       <p class="hero__text">
         Найшвидший сервіс доставки їжі у вашому місті. Якщо запізнемось - то доставка за наш рахунок
       </p>
-      <a class="hero__link btn btn--big" href="#">Замовити</a>
+      <a class="hero__link btn btn--big" href="catalog.html">Замовити</a>
       <a class="hero__link show-more" href="#">Детальніше</a>
     </div>
   </div>
@@ -166,7 +166,7 @@
     <h2 class="popular__title title">
       Популярне в категоріях
     </h2>
-    
+
     <ul class="popular__list">
       <li class="popular__item">
         <button class="popular__btn" type="button" data-filter=".burger">
@@ -209,171 +209,171 @@
         </button>
       </li>
     </ul>
-    
+
     <ul class="popular__catalog">
       <li class="popular__catalog-item mix burger sandwich">
         <article class="product-card">
-          <a class="product-card__link" href="#">
-            <img class="product-card__img" src="images/product-card/burger1.jpg" alt="Чізбургер з листям салату"
-              width="140" height="140">
-          </a>
-          <h3 class="product-card__title">
-            Чізбургер з листям салату
-          </h3>
-          <span class="product-card__price">
-            160
-            <span class="currency">грн.</span>
-          </span>
-          <button class="btn" type="button">До кошика</button>
-        </article>
+  <a class="product-card__link" href="#">
+    <img class="product-card__img" src="images/product-card/burger1.jpg" alt="Чізбургер з листям салату" width="140"
+      height="140">
+  </a>
+  <h3 class="product-card__title">
+    Чізбургер з листям салату
+  </h3>
+  <span class="product-card__price">
+    160
+    <span class="currency">грн.</span>
+  </span>
+  <button class="btn" type="button">До кошика</button>
+</article>
       </li>
       <li class="popular__catalog-item mix burger pizza">
         <article class="product-card">
-          <a class="product-card__link" href="#">
-            <img class="product-card__img" src="images/product-card/burger2.jpg" alt="Чізбургер з листям салату"
-              width="140" height="140">
-          </a>
-          <h3 class="product-card__title">
-            Біфбургер
-          </h3>
-          <span class="product-card__price">
-            190
-            <span class="currency">грн.</span>
-          </span>
-          <button class="btn" type="button">До кошика</button>
-        </article>
+  <a class="product-card__link" href="#">
+    <img class="product-card__img" src="images/product-card/burger2.jpg" alt="Біфбургер" width="140"
+      height="140">
+  </a>
+  <h3 class="product-card__title">
+    Біфбургер
+  </h3>
+  <span class="product-card__price">
+    190
+    <span class="currency">грн.</span>
+  </span>
+  <button class="btn" type="button">До кошика</button>
+</article>
       </li>
       <li class="popular__catalog-item mix burger asian">
         <article class="product-card">
-          <a class="product-card__link" href="#">
-            <img class="product-card__img" src="images/product-card/burger3.jpg" alt="Чізбургер з листям салату"
-              width="140" height="140">
-          </a>
-          <h3 class="product-card__title">
-            Королівський чізбургер
-          </h3>
-          <span class="product-card__price">
-            260
-            <span class="currency">грн.</span>
-          </span>
-          <button class="btn" type="button">До кошика</button>
-        </article>
+  <a class="product-card__link" href="#">
+    <img class="product-card__img" src="images/product-card/burger3.jpg" alt="Королівський чізбургер" width="140"
+      height="140">
+  </a>
+  <h3 class="product-card__title">
+    Королівський чізбургер
+  </h3>
+  <span class="product-card__price">
+    260
+    <span class="currency">грн.</span>
+  </span>
+  <button class="btn" type="button">До кошика</button>
+</article>
       </li>
       <li class="popular__catalog-item mix burger">
         <article class="product-card">
-          <a class="product-card__link" href="#">
-            <img class="product-card__img" src="images/product-card/burger4.jpg" alt="Чізбургер з листям салату"
-              width="140" height="140">
-          </a>
-          <h3 class="product-card__title">
-            Чорний гамбургер
-          </h3>
-          <span class="product-card__price">
-            199
-            <span class="currency">грн.</span>
-          </span>
-          <button class="btn" type="button">До кошика</button>
-        </article>
+  <a class="product-card__link" href="#">
+    <img class="product-card__img" src="images/product-card/burger4.jpg" alt="Чорний гамбургер" width="140"
+      height="140">
+  </a>
+  <h3 class="product-card__title">
+    Чорний гамбургер
+  </h3>
+  <span class="product-card__price">
+    199
+    <span class="currency">грн.</span>
+  </span>
+  <button class="btn" type="button">До кошика</button>
+</article>
       </li>
       <li class="popular__catalog-item mix burger set">
         <article class="product-card">
-          <a class="product-card__link" href="#">
-            <img class="product-card__img" src="images/product-card/burger5.jpg" alt="Чізбургер з листям салату"
-              width="140" height="140">
-          </a>
-          <h3 class="product-card__title">
-            Чікен бургер
-          </h3>
-          <span class="product-card__price">
-            180
-            <span class="currency">грн.</span>
-          </span>
-          <button class="btn" type="button">До кошика</button>
-        </article>
+  <a class="product-card__link" href="#">
+    <img class="product-card__img" src="images/product-card/burger5.jpg" alt="Чікен бургер" width="140"
+      height="140">
+  </a>
+  <h3 class="product-card__title">
+    Чікен бургер
+  </h3>
+  <span class="product-card__price">
+    180
+    <span class="currency">грн.</span>
+  </span>
+  <button class="btn" type="button">До кошика</button>
+</article>
       </li>
       <li class="popular__catalog-item mix burger ">
         <article class="product-card">
-          <a class="product-card__link" href="#">
-            <img class="product-card__img" src="images/product-card/burger1.jpg" alt="Чізбургер з листям салату"
-              width="140" height="140">
-          </a>
-          <h3 class="product-card__title">
-            Чізбургер з листям салату
-          </h3>
-          <span class="product-card__price">
-            160
-            <span class="currency">грн.</span>
-          </span>
-          <button class="btn" type="button">До кошика</button>
-        </article>
+  <a class="product-card__link" href="#">
+    <img class="product-card__img" src="images/product-card/burger1.jpg" alt="Чізбургер з листям салату" width="140"
+      height="140">
+  </a>
+  <h3 class="product-card__title">
+    Чізбургер з листям салату
+  </h3>
+  <span class="product-card__price">
+    160
+    <span class="currency">грн.</span>
+  </span>
+  <button class="btn" type="button">До кошика</button>
+</article>
       </li>
       <li class="popular__catalog-item mix burger sandwich">
         <article class="product-card">
-          <a class="product-card__link" href="#">
-            <img class="product-card__img" src="images/product-card/burger2.jpg" alt="Чізбургер з листям салату"
-              width="140" height="140">
-          </a>
-          <h3 class="product-card__title">
-            Біфбургер
-          </h3>
-          <span class="product-card__price">
-            190
-            <span class="currency">грн.</span>
-          </span>
-          <button class="btn" type="button">До кошика</button>
-        </article>
+  <a class="product-card__link" href="#">
+    <img class="product-card__img" src="images/product-card/burger2.jpg" alt="Біфбургер" width="140"
+      height="140">
+  </a>
+  <h3 class="product-card__title">
+    Біфбургер
+  </h3>
+  <span class="product-card__price">
+    190
+    <span class="currency">грн.</span>
+  </span>
+  <button class="btn" type="button">До кошика</button>
+</article>
       </li>
       <li class="popular__catalog-item mix burger set">
         <article class="product-card">
-          <a class="product-card__link" href="#">
-            <img class="product-card__img" src="images/product-card/burger3.jpg" alt="Чізбургер з листям салату"
-              width="140" height="140">
-          </a>
-          <h3 class="product-card__title">
-            Королівський чізбургер
-          </h3>
-          <span class="product-card__price">
-            260
-            <span class="currency">грн.</span>
-          </span>
-          <button class="btn" type="button">До кошика</button>
-        </article>
+  <a class="product-card__link" href="#">
+    <img class="product-card__img" src="images/product-card/burger3.jpg" alt="Королівський чізбургер" width="140"
+      height="140">
+  </a>
+  <h3 class="product-card__title">
+    Королівський чізбургер
+  </h3>
+  <span class="product-card__price">
+    260
+    <span class="currency">грн.</span>
+  </span>
+  <button class="btn" type="button">До кошика</button>
+</article>
       </li>
       <li class="popular__catalog-item mix burger pizza">
         <article class="product-card">
-          <a class="product-card__link" href="#">
-            <img class="product-card__img" src="images/product-card/burger4.jpg" alt="Чізбургер з листям салату"
-              width="140" height="140">
-          </a>
-          <h3 class="product-card__title">
-            Чорний гамбургер
-          </h3>
-          <span class="product-card__price">
-            199
-            <span class="currency">грн.</span>
-          </span>
-          <button class="btn" type="button">До кошика</button>
-        </article>
+  <a class="product-card__link" href="#">
+    <img class="product-card__img" src="images/product-card/burger4.jpg" alt="Чорний гамбургер" width="140"
+      height="140">
+  </a>
+  <h3 class="product-card__title">
+    Чорний гамбургер
+  </h3>
+  <span class="product-card__price">
+    199
+    <span class="currency">грн.</span>
+  </span>
+  <button class="btn" type="button">До кошика</button>
+</article>
       </li>
       <li class="popular__catalog-item mix burger asian">
         <article class="product-card">
-          <a class="product-card__link" href="#">
-            <img class="product-card__img" src="images/product-card/burger5.jpg" alt="Чізбургер з листям салату"
-              width="140" height="140">
-          </a>
-          <h3 class="product-card__title">
-            Чікен бургер
-          </h3>
-          <span class="product-card__price">
-            180
-            <span class="currency">грн.</span>
-          </span>
-          <button class="btn" type="button">До кошика</button>
-        </article>
+  <a class="product-card__link" href="#">
+    <img class="product-card__img" src="images/product-card/burger5.jpg" alt="Чікен бургер" width="140"
+      height="140">
+  </a>
+  <h3 class="product-card__title">
+    Чікен бургер
+  </h3>
+  <span class="product-card__price">
+    180
+    <span class="currency">грн.</span>
+  </span>
+  <button class="btn" type="button">До кошика</button>
+</article>
       </li>
     </ul>
 
-    <a class="popular__link show-more" href="#">Показати ще</a>
+    <a class="popular__link show-more" href="catalog.html">Показати ще</a>
   </div>
 </section>
     <section class="features section">
@@ -389,17 +389,17 @@
       </p>
 
       <ul class="features__list">
-        <li class="features__item" style="background-image: url('./images/icon-stopwatch.svg');">
+        <li class="features__item features__item--storwatch">
           <h3 class="features__item-text">
             Швидка доставка за 15 хвилин
           </h3>
         </li>
-        <li class="features__item" style="background-image: url('./images/icon-delivery.svg');">
+        <li class="features__item features__item--delivery">
           <h3 class="features__item-text">
             Чемні кур’єри
           </h3>
         </li>
-        <li class="features__item" style="background-image: url('./images/icon-shop.svg');">
+        <li class="features__item features__item--shop">
           <h3 class="features__item-text">
             Більше 500 закладів
           </h3>
