--- a/app/html/lego/_mobile-menu.html
+++ b/app/html/lego/_mobile-menu.html
@@ -13,10 +13,10 @@
 
   <ul class="mobile-menu__list">
     <li class="mobile-menu__item">
-      <a class="mobile-menu__link current link" href="#">Головна</a>
+      <a class="mobile-menu__link link@link1" href="index.html">Головна</a>
     </li>
     <li class="mobile-menu__item">
-      <a class="mobile-menu__link link" href="#">Страви</a>
+      <a class="mobile-menu__link link@link2" href="catalog.html">Страви</a>
     </li>
     <li class="mobile-menu__item">
       <a class="mobile-menu__link link" href="#footer">Контакти</a>
