--- a/app/html/pages/_hero.html
+++ b/app/html/pages/_hero.html
@@ -8,7 +8,7 @@
       <p class="hero__text">
         Найшвидший сервіс доставки їжі у вашому місті. Якщо запізнемось - то доставка за наш рахунок
       </p>
-      <a class="hero__link btn btn--big" href="#">Замовити</a>
+      <a class="hero__link btn btn--big" href="catalog.html">Замовити</a>
       <a class="hero__link show-more" href="#">Детальніше</a>
     </div>
   </div>
