--- a/app/html/lego/_header.html
+++ b/app/html/lego/_header.html
@@ -7,10 +7,10 @@
       </a>
       <ul class="menu__list">
         <li class="menu__item">
-          <a class="menu__link current link" href="#">Головна</a>
+          <a class="menu__link link@link1" href="index.html">Головна</a>
         </li>
         <li class="menu__item">
-          <a class="menu__link link" href="#">Страви</a>
+          <a class="menu__link link@link2" href="catalog.html">Страви</a>
         </li>
         <li class="menu__item">
           <a class="menu__link link" href="#footer">Контакти</a>
