--- a/app/html/index.html
+++ b/app/html/index.html
@@ -6,14 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Сервіс швидкої доставки їжі SimpleFood | Головна сторінка</title>
-  <link rel="shortcut icon" href="images/icons/favicon.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="images/favicon.svg" type="image/x-icon">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
 
   @include('lego/_header.html', {
-  "link1": " current",
+  "link1": " current",  
   "link2": "",
   })
   
