--- a/app/html/lego/_header.html
+++ b/app/html/lego/_header.html
@@ -1,8 +1,8 @@
-<header class="header">
+<header class="header" id="header">
   <div class="container header__container">
 
     <nav class="menu">
-      <a class="logo" href="#">
+      <a class="logo" href="#header">
         <img class="logo__img" src="images/logo.svg" alt="Логотип" width="197" height="39">
       </a>
       <ul class="menu__list">
