--- a/app/html/lego/_product-card.html
+++ b/app/html/lego/_product-card.html
@@ -1,5 +1,5 @@
 <article class="product-card">
-  <a class="product-card__link" href="#">
+  <a class="product-card__link" href="product.html">
     <img class="product-card__img" src="@src" alt="@title" width="140"
       height="140">
   </a>
