--- a/app/html/lego/_breadcrumbs.html
+++ b/app/html/lego/_breadcrumbs.html
@@ -1,5 +1,5 @@
 <div class="breadcrumbs">
-  <div class="container">
+  <div class="container breadcrumbs__container">
     <ul class="breadcrumbs__list">
       <li class="breadcrumbs__item">
         <a class="breadcrumbs__link link" href="index.html">
