--- a/catalog.html
+++ b/catalog.html
@@ -6,17 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Сервіс швидкої доставки їжі SimpleFood | Каталог продуктів</title>
-  <link rel="shortcut icon" href="images/icons/favicon.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="images/favicon.svg" type="image/x-icon">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
 
-  <header class="header">
+  <header class="header" id="header">
   <div class="container header__container">
 
     <nav class="menu">
-      <a class="logo" href="#">
+      <a class="logo" href="#header">
         <img class="logo__img" src="images/logo.svg" alt="Логотип" width="197" height="39">
       </a>
       <ul class="menu__list">
@@ -142,7 +142,7 @@
 
 </div>
     <div class="breadcrumbs">
-  <div class="container">
+  <div class="container breadcrumbs__container">
     <ul class="breadcrumbs__list">
       <li class="breadcrumbs__item">
         <a class="breadcrumbs__link link" href="index.html">
@@ -295,7 +295,7 @@
         <ul class="catalog__list">
           <li class="catalog__item">
             <article class="product-card">
-  <a class="product-card__link" href="#">
+  <a class="product-card__link" href="product.html">
     <img class="product-card__img" src="images/product-card/burger1.jpg" alt="Чізбургер з листям салату" width="140"
       height="140">
   </a>
@@ -311,7 +311,7 @@
           </li>
           <li class="catalog__item">
             <article class="product-card">
-  <a class="product-card__link" href="#">
+  <a class="product-card__link" href="product.html">
     <img class="product-card__img" src="images/product-card/burger2.jpg" alt="Біфбургер" width="140"
       height="140">
   </a>
@@ -327,7 +327,7 @@
           </li>
           <li class="catalog__item">
             <article class="product-card">
-  <a class="product-card__link" href="#">
+  <a class="product-card__link" href="product.html">
     <img class="product-card__img" src="images/product-card/burger3.jpg" alt="Королівський чізбургер" width="140"
       height="140">
   </a>
@@ -343,7 +343,7 @@
           </li>
           <li class="catalog__item">
             <article class="product-card">
-  <a class="product-card__link" href="#">
+  <a class="product-card__link" href="product.html">
     <img class="product-card__img" src="images/product-card/burger4.jpg" alt="Чорний гамбургер" width="140"
       height="140">
   </a>
@@ -359,7 +359,7 @@
           </li>
           <li class="catalog__item">
             <article class="product-card">
-  <a class="product-card__link" href="#">
+  <a class="product-card__link" href="product.html">
     <img class="product-card__img" src="images/product-card/burger1.jpg" alt="Чізбургер з листям салату" width="140"
       height="140">
   </a>
@@ -375,7 +375,7 @@
           </li>
           <li class="catalog__item">
             <article class="product-card">
-  <a class="product-card__link" href="#">
+  <a class="product-card__link" href="product.html">
     <img class="product-card__img" src="images/product-card/burger2.jpg" alt="Біфбургер" width="140"
       height="140">
   </a>
@@ -391,7 +391,7 @@
           </li>
           <li class="catalog__item">
             <article class="product-card">
-  <a class="product-card__link" href="#">
+  <a class="product-card__link" href="product.html">
     <img class="product-card__img" src="images/product-card/burger3.jpg" alt="Королівський чізбургер" width="140"
       height="140">
   </a>
@@ -407,7 +407,7 @@
           </li>
           <li class="catalog__item">
             <article class="product-card">
-  <a class="product-card__link" href="#">
+  <a class="product-card__link" href="product.html">
     <img class="product-card__img" src="images/product-card/burger4.jpg" alt="Чорний гамбургер" width="140"
       height="140">
   </a>
@@ -423,7 +423,7 @@
           </li>
           <li class="catalog__item">
             <article class="product-card">
-  <a class="product-card__link" href="#">
+  <a class="product-card__link" href="product.html">
     <img class="product-card__img" src="images/product-card/burger1.jpg" alt="Чізбургер з листям салату" width="140"
       height="140">
   </a>
@@ -439,7 +439,7 @@
           </li>
           <li class="catalog__item">
             <article class="product-card">
-  <a class="product-card__link" href="#">
+  <a class="product-card__link" href="product.html">
     <img class="product-card__img" src="images/product-card/burger2.jpg" alt="Біфбургер" width="140"
       height="140">
   </a>
@@ -455,7 +455,7 @@
           </li>
           <li class="catalog__item">
             <article class="product-card">
-  <a class="product-card__link" href="#">
+  <a class="product-card__link" href="product.html">
     <img class="product-card__img" src="images/product-card/burger3.jpg" alt="Королівський чізбургер" width="140"
       height="140">
   </a>
@@ -471,7 +471,7 @@
           </li>
           <li class="catalog__item">
             <article class="product-card">
-  <a class="product-card__link" href="#">
+  <a class="product-card__link" href="product.html">
     <img class="product-card__img" src="images/product-card/burger4.jpg" alt="Чорний гамбургер" width="140"
       height="140">
   </a>
