--- a/app/html/pages/_recent.html
+++ b/app/html/pages/_recent.html
@@ -83,6 +83,6 @@
         </li>
       </ul>
     </div>
-    <div class="recent__swiper-pagination"></div>
+    <div class="recent__pagination"></div>
   </div>
 </section>
