--- a/app/product.html
+++ b/app/product.html
@@ -603,16 +603,14 @@
         </li>
       </ul>
     </div>
-    <div class="recent__swiper-pagination"></div>
+    <div class="recent__pagination"></div>
   </div>
 </section>
   </main>
 
   <footer class="footer" id="footer">
   <div class="container">
-
     <div class="footer__top">
-
       <div class="footer__top-item">
         <a class="logo footer__logo" href="#">
           <img class="logo__img" src="images/logo.svg" alt="Логотип">
@@ -630,7 +628,6 @@
           </button>
         </form>
       </div>
-
       <ul class="footer__menu">
         <li class="footer__item">
           <a class="footer__link link" href="#">Як це працює</a>
@@ -669,7 +666,6 @@
           <a class="footer__link link" href="#">Мапа сайту</a>
         </li>
       </ul>
-      
       <address class="contacts">
   <ul class="contacts__list">
     <li class="contacts__item">
@@ -727,7 +723,6 @@
 </address>
     </div>
   </div>
-
   <div class="footer__bottom">
     <p class="footer__copy">
       © 2023 Simple Food
