--- a/app/catalog.html
+++ b/app/catalog.html
@@ -188,7 +188,7 @@
     <div class="catalog__inner">
       <div class="filters">
   <button class="filters__close" type="button">
-    <svg class="mobile-menu__icon" width="18" height="18">
+    <svg class="filters__close-icon" width="18" height="18">
       <use href="images/sprite.svg#icon-close"></use>
     </svg>
   </button>
