--- a/app/html/lego/_filters.html
+++ b/app/html/lego/_filters.html
@@ -1,6 +1,6 @@
 <div class="filters">
   <button class="filters__close" type="button">
-    <svg class="mobile-menu__icon" width="18" height="18">
+    <svg class="filters__close-icon" width="18" height="18">
       <use href="images/sprite.svg#icon-close"></use>
     </svg>
   </button>
